--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.1",
     "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.11",
     "recharts": "^2.12.0",
     "uuid": "^9.0.1",
     "vite-plugin-pwa": "^0.17.4",
